--- a/app/src/main/res/layout/page_view_fragment_item.xml
+++ b/app/src/main/res/layout/page_view_fragment_item.xml
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.099"
-        app:srcCompat="@drawable/sansg" />
+        app:srcCompat="@drawable/sansm" />
 
     <TextView
         android:id="@+id/hepltext"
